--- a/tecnart/assets/css/style.css
+++ b/tecnart/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-	background-color: #333F50;
+	background-color: #000033;
 }
 
 .layout_padding {
@@ -46,6 +46,13 @@ header {
 h1,
 h2 {
 	font-family: 'Playfair Display', serif;
+	
+}
+
+h2,
+h3 {
+	color: #002169;
+	
 }
 
 .heading_container {
@@ -991,14 +998,14 @@ a:focus {
 	display: inline-block;
 	font-family: 'Merriweather Sans', sans-serif !important;
 	font-size: 33px;
-	color: #333f50;
+	color: #000033;
 
 }
 
 .heading_h3 {
 	font-family: 'Merriweather Sans', sans-serif !important;
 	font-size: 33px;
-	color: #333f50;
+	color: #000033;
 }
 
 .heading2_h5 {
@@ -1072,7 +1079,7 @@ li.nav-item ul li a {
 
 
 footer {
-	background: #333F50;
+	background: #000033;
 	padding: 90px 0 70px;
 }
 
@@ -1205,7 +1212,7 @@ form input[type="submit"]:focus {
 /** cpy **/
 
 .cpy_ {
-	background: #333F50;
+	background: #000033;
 	text-align: center;
 
 }
@@ -1928,7 +1935,7 @@ fieldset:disabled a.btn {
 }
 
 .dropdown-content a:hover {
-	background-color: #333F50;
+	background-color: #000033;
 	color: #ffffff;
 }
 
@@ -1938,7 +1945,7 @@ fieldset:disabled a.btn {
 
 
 #nav_drop:hover {
-	color: #333F50;
+	color: #000033;
 	background-color: #ffffff;
 }
 
@@ -2129,7 +2136,7 @@ fieldset:disabled a.btn {
 
 .cormuda:hover {
 	color: #ffffff;
-	background-color: #333f50;
+	background-color: #000033;
 }
 
 .nofinal {
@@ -2193,13 +2200,13 @@ fieldset:disabled a.btn {
 	height: 40px;
 	display: table-cell;
 	vertical-align: middle;
-	border-color: #333f50;
+	border-color: #000033;
 	padding: 0px 0px 0px;
 }
 
 .divbotao:hover {
 	color: #ffffff;
-	background-color: #333f50;
+	background-color: #000033;
 }
 
 .innerButton {
@@ -2230,7 +2237,7 @@ fieldset:disabled a.btn {
 	width: 30%;
 	font-family: 'Merriweather Sans', sans-serif;
 	font-size: 24px;
-	color: #333f50;
+	color: #000033;
 	text-align: right;
 	padding-right: 25px;
 }
