--- a/tecnart/assets/css/style.css
+++ b/tecnart/assets/css/style.css
@@ -95,7 +95,6 @@ h2 {
 .heading_container.heading_center {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
-	align-items: center;
 
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -969,8 +968,8 @@ a:focus {
 .heading_container.heading_center h3 {
 	position: relative;
 	margin-bottom: 15px;
-	font-size: 2.5rem;
-	font-family: 'Quicksand', sans-serif;
+	font-size: 32px;
+	font-family: 'Merriweather Sans Light';
 }
 
 .heading_container2.heading_center2 h3 {
