--- a/tecnart/assets/css/style.scss
+++ b/tecnart/assets/css/style.scss
@@ -9,12 +9,14 @@ $textCol: #1f1f1f;
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap');
 
 @mixin main-font {
-  font-family: 'Poppins', sans-serif;
+	font-family: 'Merriweather Sans';
+	font-weight: bold;
+	font-size: 31px;
 }
 
 @mixin second-font {
-  font-family: 'Playfair Display', serif;
-}
+	font-family: 'Merriweather Sans';
+	font-size: 14px;}
 
 @mixin hero_btn($col1, $col2, $pad1, $pad2, $bRadius) {
   display: inline-block;
@@ -807,3 +809,17 @@ a:focus {
 }
 
 // end footer section
+
+
+
+
+h1, h2, h3 {
+	font-family: 'Merriweather Sans';
+	font-weight: bold;
+	font-size: 21px;
+}
+
+p, span, a, div {
+	font-family: 'Merriweather Sans';
+	font-size: 14px;
+}
