Story 21 - Task 4 - Done

--- a/tecnart/assets/css/style.css
+++ b/tecnart/assets/css/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
 	box-sizing: border-box;
 }
 
 body {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Merriweather Sans', sans-serif;
 	color: #0c0c0c;
 	background-color: #ffffff;
 	overflow-x: hidden;
@@ -627,6 +627,12 @@ a:focus {
 	font-weight: 700;
 }
 
+.project-box {
+    width: 300px !important;
+	height: 230px !important;
+	object-fit: cover;
+}
+
 .remove_line_bt h2::after {
 	display: none;
 }
@@ -986,14 +992,14 @@ a:focus {
 	display: inline-block;
 	font-family: 'Merriweather Sans', sans-serif !important;
 	font-size: 33px;
-	color: #000033;
+	color: #002169;
 
 }
 
 .heading_h3 {
 	font-family: 'Merriweather Sans', sans-serif !important;
 	font-size: 33px;
-	color: #000033;
+	color: #002169;
 }
 
 .heading2_h5 {
@@ -1233,7 +1239,7 @@ form input[type="submit"]:focus {
 .owl-carousel .owl-nav {
 	position: absolute;
 	top: 50%;
-	width: 102%;
+	width: 103%;
 }
 
 .owl-carousel .owl-nav .owl-prev,
@@ -1844,7 +1850,7 @@ fieldset:disabled a.btn {
 
 .text-block {
 	position: absolute;
-	font-family: system-ui;
+	font-family: 'Merriweather Sans';
 	bottom: 16px;
 	left: 16px;
 	color: white;
@@ -1973,8 +1979,7 @@ fieldset:disabled a.btn {
 	transform: translate(-50%, -50%);
 	z-index: 10;
 	color: #ffffff;
-	font-family: 'PT Sans', sans-serif;
-	text-transform: uppercase;
+	font-family: 'Merriweather Sans', sans-serif;
 	font-size: 23px;
 	text-align: center;
 	font-weight: 600;
@@ -2183,7 +2188,7 @@ fieldset:disabled a.btn {
 }
 
 .innerButton {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Merriweather Sans', sans-serif;
 	font-size: 16px;
 	text-transform: uppercase;
 	font-weight: 400;
@@ -2254,7 +2259,7 @@ figcaption {
 	margin-top: 10px;
 	z-index: 1;
 	font-size: 14px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Merriweather Sans', sans-serif;
 	font-weight: 300;
 }
 
@@ -2268,7 +2273,7 @@ figcaption {
 
 .news-image{
   height: 300px;
-  width: 300px;
+  width: 360px;
   object-fit: cover; /* Resize the image to cover the entire container */
 }
 
